--- a/.github/workflows/down.yml
+++ b/.github/workflows/down.yml
@@ -13,43 +13,29 @@ jobs:
   down:
     name: Destroy
     runs-on: ubuntu-latest
-    
+  
+    env:
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+  
     steps:
-      
       - name: Checkout code
         uses: actions/checkout@v2
-      
-      - name: Set variables
-        id: variables
-        run: |
-          raw=$(git branch -r --contains ${{ github.ref }})
-          branch=${raw##*/}
-          echo "BRANCH=$branch" >> $GITHUB_ENV
-          echo "STACK_NAME_FULL=${{ env.STACK_NAME_PREFIX }}$branch" >> $GITHUB_ENV
-          echo "::set-output name=BRANCH::$branch"
-      
+    
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_wrapper: false
-      
+    
       - name: Terraform Init
         id: init
         working-directory: ${{ github.workspace }}/infrastructure
-        run: terraform init -backend-config "key=${{ steps.variables.outputs.BRANCH }}"
-        env:
-          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        run: terraform init -backend-config "key=${{ github.event.pull_request.head.ref }}"
       
       - name: Terraform Destroy
         id: validate
         working-directory: ${{ github.workspace }}/infrastructure
         run: terraform destroy -auto-approve
-        env:
-          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
     
