--- a/.github/workflows/up.yml
+++ b/.github/workflows/up.yml
@@ -65,7 +65,7 @@ jobs:
         working-directory: ${{ github.workspace }}/infrastructure
         run: |
           terraform plan -no-color \
-            -var 'pr-number=${{ github.event.issue.number }}'
+            -var 'pr-number=${{ github.event.number }}'
         continue-on-error: true
       
       - name: Comment PR
@@ -105,7 +105,7 @@ jobs:
         working-directory: ${{ github.workspace }}/infrastructure
         run: |
           terraform apply -auto-approve \
-            -var 'pr-number=${{ github.event.issue.number }}'
+            -var 'pr-number=${{ github.event.number }}'
       
       # This aint ugly at all:
       # https://github.com/actions/toolkit/issues/403
