--- a/.github/workflows/up.yml
+++ b/.github/workflows/up.yml
@@ -26,13 +26,18 @@ jobs:
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
     
     steps:
+#      - name: Dump GitHub context
+      #        env:
+      #          GITHUB_CONTEXT: ${{ toJson(github) }}
+      #        run: echo "$GITHUB_CONTEXT"
+  
       - name: Checkout code
         uses: actions/checkout@v2
   
       - name: Install .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '5.0.x'
+          dotnet-version: '3.1.x'
   
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
@@ -52,43 +57,81 @@ jobs:
       - name: Terraform Init
         id: init
         working-directory: ${{ github.workspace }}/infrastructure
-        run: terraform init -backend-config "key=${{ github.event.pull_request.head.ref }}"
-      
+        run: |
+          terraform init \
+            -backend-config "key=PR-${{ github.event.pull_request.number }}" \
+            -backend-config "resource_group_name=${{ secrets.TFSTATE_RG }}" \
+            -backend-config "storage_account_name=${{ secrets.TFSTATE_SA_NAME }}" \
+            -backend-config "container_name=${{ secrets.TFSTATE_CONTAINER_NAME }}"
+
       - name: Terraform Validate
         id: validate
         working-directory: ${{ github.workspace }}/infrastructure
-        run: terraform validate -no-color
-      
+        run: |
+          unset t_std t_err
+  
+          eval "$( terraform validate -no-color \
+                  2> >(t_err=$(cat); typeset -p t_err) \
+                   > >(t_std=$(cat); typeset -p t_std) )"
+  
+          t_err="${t_err//'%'/'%25'}"
+          t_err="${t_err//$'\n'/'%0A'}"
+          t_err="${t_err//$'\r'/'%0D'}"
+  
+          echo "::set-output name=stderr::$t_err"
+  
+          t_std="${t_std//'%'/'%25'}"
+          t_std="${t_std//$'\n'/'%0A'}"
+          t_std="${t_std//$'\r'/'%0D'}"
+  
+          echo "::set-output name=stdout::$t_std"
+  
       - name: Terraform Plan
         id: plan
         if: github.event_name == 'pull_request'
         working-directory: ${{ github.workspace }}/infrastructure
-        run: |
-          terraform plan -no-color \
-            -var 'pr-number=${{ github.event.number }}'
         continue-on-error: true
-      
-      - name: Comment PR
+        run: |
+          unset t_std t_err
+    
+          eval "$( terraform plan -no-color -var 'pr-number=${{ github.event.pull_request.number }}' \
+                  2> >(t_err=$(cat); typeset -p t_err) \
+                   > >(t_std=$(cat); typeset -p t_std) )"
+    
+          t_err="${t_err//'%'/'%25'}"
+          t_err="${t_err//$'\n'/'%0A'}"
+          t_err="${t_err//$'\r'/'%0D'}"
+    
+          echo "::set-output name=stderr::$t_err"
+    
+          t_std="${t_std//'%'/'%25'}"
+          t_std="${t_std//$'\n'/'%0A'}"
+          t_std="${t_std//$'\r'/'%0D'}"
+    
+          echo "::set-output name=stdout::$t_std"
+  
+      - name: Comment PR with Terraform status
         uses: actions/github-script@0.9.0
         if: github.event_name == 'pull_request'
         env:
-          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+          PLAN: "${{ steps.plan.outputs.stderr }}\n${{ steps.plan.outputs.stdout }}"
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
             #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
-            #### Terraform Validation 🤖${{ steps.validate.outputs.stdout }}
+            #### Terraform Validation 🤖 ${{ steps.validate.outputs.stderr }}${{ steps.validate.outputs.stdout }}
             #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
-          
+      
             <details><summary>Show Plan</summary>
-          
-            \`\`\`${process.env.PLAN}\`\`\`
-          
+      
+            \`\`\`${{ env.PLAN }}
+            \`\`\`
+      
             </details>
-          
+      
             *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ env.tf_actions_working_dir }}\`, Workflow: \`${{ github.workflow }}\`*`;
-          
+      
             github.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
@@ -105,31 +148,43 @@ jobs:
         working-directory: ${{ github.workspace }}/infrastructure
         run: |
           terraform apply -auto-approve \
-            -var 'pr-number=${{ github.event.number }}'
+            -var 'pr-number=${{ github.event.pull_request.number }}'
       
-      # This aint ugly at all:
-      # https://github.com/actions/toolkit/issues/403
       - name: Terraform get outputs
         id: terraform-outputs
         working-directory: ${{ github.workspace }}/infrastructure
         run: |
           echo "::set-output name=AZURE_RBAC_CREDENTIALS::$(terraform output -raw sdk-auth)"
           echo "::set-output name=AZURE_FUNCTIONAPP_NAME::$(terraform output -raw azure-function-name)"
-      
-      
-      - name: 'Login via Azure CLI'
+  
+  
+      - name: Login via Azure CLI
         uses: azure/login@v1
         with:
           creds: ${{ steps.terraform-outputs.outputs.AZURE_RBAC_CREDENTIALS }}
-      
-      - name: 'Dotnet build'
+  
+      - name: Dotnet build
         run: dotnet build --configuration Release --output ./publish-output
-      
-      - name: 'Deploy Azure Function'
+  
+      - name: Deploy Azure Function
         uses: Azure/functions-action@v1
-        id: fa
         with:
           app-name: ${{ steps.terraform-outputs.outputs.AZURE_FUNCTIONAPP_NAME }}
           package: ./publish-output
-          
+  
+      - name: Comment PR with URL
+        uses: actions/github-script@0.9.0
+        if: github.event.action == 'opened' || github.event.action == 'reopened'
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const output = `#### Feature environment base URL:
+            https://${{ steps.terraform-outputs.outputs.AZURE_FUNCTIONAPP_NAME }}.azurewebsites.net/api/hello-medium`;
+      
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
           
