--- a/HelloMedium/HelloMedium.csproj
+++ b/HelloMedium/HelloMedium.csproj
@@ -1,10 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AzureFunctionsVersion>v3</AzureFunctionsVersion>
+      <TargetFramework>netcoreapp3.1</TargetFramework>
+      <AzureFunctionsVersion>v3</AzureFunctionsVersion>
+      <LangVersion>9</LangVersion>
+      <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.7"/>
+      <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.7"/>
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
